[gd_scene load_steps=3 format=3 uid="uid://o3wchp5w6l0p"]

[ext_resource type="Script" uid="uid://clcfgrlcy0ldq" path="res://scripts/ui/MenuScreen/menuScreen.gd" id="1_4mtcq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xb0v"]
bg_color = Color(0.176471, 0.176471, 0.176471, 0.470588)

[node name="MenuScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4mtcq")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0xb0v")

[node name="DialogPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="DialogPanel"]
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="DialogPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Resume" type="Button" parent="DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Resume"

[node name="Settings" type="Button" parent="DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="ExitToTitleScreen" type="Button" parent="DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Exit to Title Screen"

[node name="ExitToDesktop" type="Button" parent="DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Exit to Desktop"

[connection signal="pressed" from="DialogPanel/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="DialogPanel/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="DialogPanel/MarginContainer/VBoxContainer/ExitToTitleScreen" to="." method="_on_exit_to_title_screen_pressed"]
[connection signal="pressed" from="DialogPanel/MarginContainer/VBoxContainer/ExitToDesktop" to="." method="_on_exit_to_desktop_pressed"]
